<resources>
    <string name="app_name">通讯录的英雄们</string>
    <string name="app_version">0.0.10.1_beta</string>
    <string name="action_settings">关于</string>
    <string name="first_fragment_label">俄罗斯娜娜语音包</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="recovery">恢力</string>
    <string name="button1">俄罗斯娜娜大贝塔</string>
    <string name="button2">我不拉黑你</string>
    <string name="button3">安琪拉你唱吧</string>
    <string name="button4">我的名字好听吗</string>
    <string name="button5">你的妈生下你失败</string>
    <string name="button6">你凭啥这样说我</string>
    <string name="button7">你妈鼓鼓的</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="music">音乐</string>
    <string name="profile">关于</string>
    <string name="home">主页</string>
    <string name="stop">停</string>
    <string name="toolbar">Toolbar</string>
    <string name="button8">把你的幸福建立在别人的痛苦之上</string>
    <string name="button9">我唱歌有错吗</string>
    <string name="button10">吃了没事头被门挤了吗</string>
    <string name="button11">跟你妈妈一样，你妈妈是什么我就是什么</string>
    <string name="button12">说过一个脏字吗</string>
    <string name="button13">烦死了一天</string>
    <string name="button14">不要来攻击我</string>
    <string name="button15">跟你爸爸妈妈一起合唱</string>
    <string name="button16">吃狗屎</string>
    <string name="button17">谁不圈钱</string>
    <string name="button18">你配吗</string>
    <string name="button19">年纪轻轻八十岁</string>
    <string name="button20">拱出去</string>
    <string name="button21">难受去学习</string>
    <string name="button22">你不正常我不凶你吗</string>
    <string name="button23">嚼舌根的人</string>
    <string name="button24">不喜欢你这种语言</string>
    <string name="button25">爸妈给你钱读书</string>
    <string name="button26">举报了一个人</string>
    <string name="button27">爸爸妈妈圈米</string>
    <string name="button28">回家看看臭贝塔</string>
    <string name="button29">不要这样说话</string>
    <string name="button30">你的奶奶怀孕了吗</string>
    <string name="button31">哪一句话有低俗</string>
    <string name="button32">你妈妈被他弄了</string>
    <string name="button33">永远会越战越勇</string>
    <string name="button34">你妈妈生孩子</string>
    <string name="button35">妈妈是你最好的老师</string>
    <string name="button36">立刻举报你</string>
    <string name="button37">想怀孕自己怀</string>
    <string name="app_introduce">通讯录英雄语音包大集合。娜娜语音包来源@倾鹿 ，后续英雄正在开发中。作者一直在努力改进这款应用，欢迎随时投稿，提交bug。</string>
    <string name="picture">美图</string>
    <string name="sister">开心姐</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="nana">俄罗斯娜娜</string>
    <string name="nanasong2">大贝塔-DJ版</string>
    <string name="nanasong1">贝如塔1.3</string>
    <string name="cangjb">藏举霸</string>
    <string name="recover">恢复了力气和手段</string>
    <string name="stopaudio">停止播放</string>
    <string name="nanasong">贝塔系列音乐</string>
    <string name="button38">你懂艺术吗</string>
    <string name="button39">必须给我道歉</string>
    <string name="button40">你看不见吗</string>
    <string name="button41">给娜姐打一波砰砰砰</string>
    <string name="lose">失力</string>
    <string name="bepolite">骂人骂的文明点</string>
    <string name="youngman">得到你们年轻人的关注</string>
    <string name="babynofighting">不和你们吵架了\n</string>
    <string name="baby">宝贝们</string>
    <string name="search">输入你想搜索的内容</string>
    <string name="menu">侧边栏</string>
    <string name="nanasing">来自娜娜的吟唱</string>
    <string name="lovelikefirehead">爱如火_开头</string>
    <string name="lovelikefiremain">爱如火_副歌</string>
    <string name="dogbite">不管骂什么当狗咬</string>
    <string name="goaway">拱出去拱得远远地</string>
    <string name="oldpersonsmell">和你妈一样有老人味</string>
    <string name="awomarenlema">啊我骂人了吗</string>
    <string name="bazijixiandehaogaodangyiyang">把自己显得好高大上一样</string>
    <string name="bierenshuonishule">别人说你鼠了</string>
    <string name="buhezaoyaotongliuhewu">不和造谣同流合污</string>
    <string name="geitalianmianbuyaolian">给他脸面不要脸</string>
    <string name="guzilijiubuhuigennimentongliuhewu">骨子里就不会跟你们同流合污</string>
    <string name="mayanimayamalelannidezui">骂呀你骂呀骂了烂你的嘴</string>
    <string name="mayazenmebuganlaimale">骂呀怎么不敢来骂了</string>
    <string name="buzhidaotadefumudouzenmejiaoyu">不知道他的父母都怎么教育</string>
    <string name="daoqian">道歉</string>
    <string name="daoqianlai">道歉来</string>
    <string name="gangcaimadenaxiehuanimenmeitingdaoma">刚才骂得哪些话你们没听到吗</string>
    <string name="kanzhedouexintichuqu">看着都恶心踢出去</string>
    <string name="meigerenwodouconglaibumade">每个人我都从来不骂得</string>
    <string name="nianqingrennachuzhengyinengliangdoushiweilekuaile">年轻人那出正能量都是为了快乐</string>
    <string name="nichibaolechengdea">你吃饱了撑得啊</string>
    <string name="nidashulehaixiangshualaima">你打输了还想耍赖吗</string>
    <string name="nidingmingzihaoting">你的名字好听</string>
    <string name="nigeilaozimashangshandiao">你给老子马上删掉</string>
    <string name="nigeiwochuquba">你给我出去吧</string>
    <string name="nigexialiudongxigunchuqu">你个下流东西滚出去</string>
    <string name="nijinlaijiumawonilaiganmane">你今来就骂我你来干什么</string>
    <string name="nikanzhebangrenzongyouyitianshouchengfa">你看这帮人总有一天受惩罚</string>
    <string name="nilaianiyoubenshilaizhaowowopeigeini">你来啊你有本事来找我我赔给你</string>
    <string name="nimagentashiguimi">你妈跟他是闺蜜</string>
    <string name="nimayoumamp3">你妈有吗</string>
    <string name="nimennazhangpozuixiangzenmeshuowusuoweia">你们那张破嘴想怎么说无所谓啊</string>
    <string name="ninazhangpozuizenmezaozhengmingrenpinyouwenti">你那张破嘴怎么造证明人品有问题</string>
    <string name="ninianjiqingqingdebiwolaotaitaihaiburuma">你年纪轻轻的比我老太太还不如吗</string>
    <string name="ninianjiqingqingdekanbuchulaima">你年纪轻轻的看不出来吗</string>
    <string name="niqumabierenya">你去骂别人呀</string>
    <string name="nishichangshefuma">你是长舌妇吗</string>
    <string name="nishuleenihaishualaima">你输了你还耍赖吗</string>
    <string name="nishuodenaxiehuanibudisuma">你说的那些话你不低俗吗</string>
    <string name="nishuoshuidisujiudisunigaosu">你说谁低俗就低俗你高熟</string>
    <string name="niweishenmebufayixiezhengnengliangdedongxi">你为什么不发一些正能量的东西</string>
    <string name="niwenhuawenderangrenyoudianbuxihuanting">你问话问的让人有点不喜欢听</string>
    <string name="nixiangmawonijiubuxing">你想骂我你就不行</string>
    <string name="nixinlibucankuima">你心里不惭愧吗</string>
    <string name="niyongyuanshigedihuanggua">你永远是个地黄瓜</string>
    <string name="niyoushaquanliwenrenjianandenvde">你有啥权利问人间男的女的</string>
    <string name="niyuanwangbierenbuneijiuma">你冤枉别人不内疚吗</string>
    <string name="nizaigeiwodayigeshishi">你再给我打一个试试</string>
    <string name="nizaigeiwoma">你再给我骂</string>
    <string name="nizameizaonizijijiaren">你咋没造你自己家人啊</string>
    <string name="nizaoyaorenpinyouwenti">你造谣人品有问题</string>
    <string name="nizhangdehaoma">你张的好吗</string>
    <string name="nizhaochouba">你找抽吧</string>
    <string name="nizhentmgefantonggun">你真tm个饭桶滚</string>
    <string name="nizhezhongxialiudongxi">你这种下流东西 </string>
    <string name="nizijiangzangbabierendehuadoushiangzang">你自己肮脏把别人的话都是肮脏</string>
    <string name="pingqiaobufenzalienitingbudongma">平翘不分咋咧你听不懂吗</string>
    <string name="quefajiaoyurangrentonghendaolejidian">缺乏教育让人痛恨到了极点</string>
    <string name="shanamehaoxiaoma">啥那么好笑吗</string>
    <string name="shangtianhuichengfani">上天会惩罚你</string>
    <string name="sharenayitianyiweitashishui">啥人啊一天以为他是谁</string>
    <string name="shenjingbing">神经病</string>
    <string name="shenjinglemanaoguazibeimenjile">神经了脑瓜被门挤了吗</string>
    <string name="shenmerenayitianshuohua">什么人那一天说话</string>
    <string name="shinijiahuozuzongshinijiayeye">是你家活祖宗是你家爷爷</string>
    <string name="shuizhuanglewoshibiaoyan">谁装了我是表演</string>
    <string name="shuohuabunenghaohaoshuomazanamedisu">说话不能好好说吗咋那么低俗</string>
    <string name="suanshadongxi">算啥东西</string>
    <string name="suoyishuoyijiu">说一说就不正常这种人</string>
    <string name="tamamayeshitongweinvren">他妈妈也是女人</string>
    <string name="tataiedulegenniwuyuanwuchou">他太恶毒了我跟他无冤无仇</string>
    <string name="waxiaoqiao">哇小乔</string>
    <string name="woaizhenishashilemawofangainilema">我碍着你啥事了骂我妨碍你了吗</string>
    <string name="wobuhuibeidadao">我不会被打到</string>
    <string name="wobuhuichangdebuguannizenmeshuo">我不会唱的不管你们怎么说</string>
    <string name="wobuhuizuoyidiandianxiasanlandeshi">我不会做一点点下三滥的事</string>
    <string name="wodelaodongfuchufangzhedeqianbuzhuanma">我的劳动付出放着钱不赚吗</string>
    <string name="woganjuedaonihenneijiu">我感觉到你很内疚</string>
    <string name="wohuyudizhizhexiedisuderen">我呼吁抵制这些低俗的人</string>
    <string name="wokandaozhexiedishuderenwodoufansile">我看到这些低俗的人我都烦死了</string>
    <string name="wolianglejiulianglewoyemeizaihu">我凉了就凉了我也没在乎</string>
    <string name="womarenlema">我骂人了吗</string>
    <string name="womashangjubaonibanizhanghaofengle">我马上就举报你把你账号封了</string>
    <string name="womashuilerangnimenjidexingshan">我骂谁了让你们记得行善</string>
    <string name="wonalibuwenmingliaoshuoguoyijubuwenmingdehuama">我那里不文明了说过一句不文明的话吗</string>
    <string name="woshuodehuameicuoba">我说的话没错吧</string>
    <string name="woxihuanbiaoyanwofanlenayitiao">我喜欢表演我我犯了哪一条</string>
    <string name="woyeshiyigebabamama">我也是一个爸爸妈妈</string>
    <string name="woyoushawentiagongchuqu">我有啥问题啊拱出去</string>
    <string name="xianqinaxiedishuderenzaoyaoderen">嫌弃那些低俗的人造谣的人</string>
    <string name="yigegegenguiyiyangyitian">一个个跟鬼一样一天</string>
    <string name="yigegenaoguazibeimenjile">一个脑瓜子被门挤了</string>
    <string name="yitiandaowanbuhushuobadaoninanshou">一天到晚你不胡说八道你难受是不是</string>
    <string name="yitiandaowanbushuobierenninanshoushiba">一天到晚你不说别人你难受是吧</string>
    <string name="yitiandaowannimenhushuobadaozaizangxianhai">一天到晚你们胡说八道栽赃陷害</string>
    <string name="yitiandaowanwenyixieluanqibazaode">一天到晚问一些乱七八糟的</string>
    <string name="zaiwomianqianmatagegouxuelintou">在我面前骂他个狗血淋头</string>
    <string name="zalieniyouyijianma">咋了你有意见吗</string>
    <string name="zhenalaideyigeren">这哪来的一个人</string>
    <string name="zhendewuliao">真的无聊</string>
    <string name="zhenshigejiandongxi">真是个贱东西</string>
    <string name="zhenshishenjingbingzhexieren">真是神经病这些人</string>
    <string name="zheshiwodegongzuonizhidaoma">这是我的工作你知道吗</string>
    <string name="nidemingzihaoting">你的名字好听</string>
    <string name="nishulenihaishualaima">你输了你还耍赖吗</string>
    <string name="shenjinglemanaoguazibeimenjilema">神经了吗脑瓜子被门挤了</string>
    <string name="suoyishuojiubuzhengchangzhezhongren">所以说就不正常这种人</string>
    <string name="yitiandaowannibushuobierenninanshoushiba">一天到晚你不说别人你难受是吧</string>
    <string name="song">音乐</string>
    <string name="yimeiyouha">1没有哈</string>
    <string name="aiyataihaowanlea">哎呀 太好玩了啊</string>
    <string name="buguannimenshishuizhiyaowenming">不管你们是谁 只要文明</string>
    <string name="dajiahao">大家好</string>
    <string name="dajiahaowoshiairuhuodeyuanchang_nayina">大家好 我是爱如火的原唱 那艺娜</string>
    <string name="danshe">弹舌</string>
    <string name="duibudui">对不对</string>
    <string name="geidajiabiaogegaoyin">给大家飙个高音</string>
    <string name="geiwodaoqian">给我道歉</string>
    <string name="geiwodaoqian_paizhuo">给我道歉（拍桌）</string>
    <string name="gennirenshima">跟你认识吗</string>
    <string name="haohaokandezixingche_sunbin">好好看的自行车（孙膑）</string>
    <string name="kanzhejiurangrenqiaobuqi">看着就让人瞧不起</string>
    <string name="laidayibaba">来 打一把吧</string>
    <string name="majiaqi">马嘉祺</string>
    <string name="nanaainimen">娜娜爱你们</string>
    <string name="nayigebiaozhunle_meiyoubiwobiaozhun">哪一个标准了 没有比我标准</string>
    <string name="nibupawonibupabei">你不怕我你不怕呗</string>
</resources>